--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,6 +8,38 @@
   <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
 </head>
 <body>
-  <h1>Agenda</h1>
+  <header class="header">
+    <h1 class="header-heading">
+      <a href="{% url 'contact:index'%}" class="header-link">
+        AGENDA
+      </a>
+    </h1>
+    <nav class="menu">
+      <ul class="menu-list">
+        <li class="menu-item"></li>
+          <a href="" class="menu-link">
+            Link 1
+          </a>
+        <li class="menu-item"></li>
+          <a href="" class="menu-link">
+            Link 2
+          </a>
+      </ul>
+    </nav>
+    <div class="search">
+      <form action="" method="get">
+        <input
+            type="search"
+            class="search-input"
+            placeholder="search"
+            id="search"
+            name="q"
+        >
+      </form>
+    </div>
+  </header>
+  <main class="content">
+    {% block content %}{% endblock content %}
+  </main>
 </body>
 </html>
